fix bug criar e alterar curso inclusive alteração path da imagem

--- a/src/app/components/entidades/formulario-cursos/formulario-cursos.component.html
+++ b/src/app/components/entidades/formulario-cursos/formulario-cursos.component.html
@@ -38,8 +38,8 @@
 
         </div>
         <div class="controles">
-          <p class="link" [routerLink]="['/professor-plataformaz']">Voltar</p>
-          <button type="submit" class="btn" [disabled]="!arquivosSelecionados" (click)="uploadArquivo()" (click)="envioFormulario()" [routerLink]="['/home-plataforma']">Salvar</button>
+          <p class="link" [routerLink]="['/home-plataforma/cursos']">Voltar</p>
+          <button type="submit" class="btn" [disabled]="!arquivosSelecionados" (click)="uploadArquivo()" (click)="envioFormulario()">Salvar</button>
         </div>
       </form>
     </div>
