--- a/src/app/components/entidades/formulario-cursos-update/formulario-cursos-update.component.html
+++ b/src/app/components/entidades/formulario-cursos-update/formulario-cursos-update.component.html
@@ -39,7 +39,7 @@
           </div>
           <div class="controles">
             <p class="link" [routerLink]="['/home-plataforma/cursos']">Voltar</p>
-            <button type="submit" class="btn" [disabled]="!arquivosSelecionados" (click)="uploadArquivo()" (click)="envioFormulario()">Salvar</button>
+            <button type="submit" class="btn" (click)="uploadArquivo()" (click)="envioFormulario()">Salvar</button>
           </div>
         </form>
       </div>
