Corrigindo rotas modulos

--- a/src/app/components/entidades/conteudo-curso/conteudo-curso.component.html
+++ b/src/app/components/entidades/conteudo-curso/conteudo-curso.component.html
@@ -33,7 +33,7 @@
           </div>
           <div class="controles">
             <p class="link" [routerLink]="['/home-plataforma/cursos']">Voltar</p>
-            <button type="submit" class="btn" [disabled]="!arquivosSelecionados" (click)="uploadArquivo()" (click)="envioFormulario()" [routerLink]="['/home-plataforma/cursos']">Salvar</button>
+            <button type="submit" class="btn" [disabled]="!arquivosSelecionados" (click)="uploadArquivo()" (click)="envioFormulario()" [routerLink]="['/home-plataforma/adicionando-modulos']">Salvar</button>
           </div>
         </form>
       </div>
