Implementada a funcionalidade de enviar um e-mail por meio do fale conosco

--- a/src/app/components/layout/home-plataforma/home-plataforma.component.html
+++ b/src/app/components/layout/home-plataforma/home-plataforma.component.html
@@ -17,6 +17,9 @@
             <li>
                 <mat-icon [routerLink]="['/']" class="icon">logout</mat-icon>                
             </li>
+            <li>
+                <mat-icon [routerLink]="['/home-plataforma/fale-conosco']" class="icon">email</mat-icon>                
+            </li>
         </ul>
     </div>
     <!-- /#sidebar-wrapper -->
