--- a/src/app/components/entidades/conteudo-curso/conteudo-curso.component.html
+++ b/src/app/components/entidades/conteudo-curso/conteudo-curso.component.html
@@ -32,7 +32,7 @@
   
           </div>
           <div class="controles">
-            <p class="link" [routerLink]="['/home-plataforma/cursos']">Voltar</p>
+            <p class="link" (click) = "cancelar()">Voltar</p>
             <button type="submit" class="btn" [disabled]="!arquivosSelecionados" (click)="uploadArquivo()" (click)="envioFormulario()" >Salvar</button>
           </div>
         </form>
