Melhorias nas funcionalidades de envio do email

--- a/src/app/components/layout/home/home.component.html
+++ b/src/app/components/layout/home/home.component.html
@@ -17,6 +17,7 @@
     <mat-icon [routerLink]="['/aprendizado']" class="icon" (click)="emitirClickBook()" [routerLink]="['/aprendizado']">menu_book</mat-icon>
     <mat-icon [routerLink]="['/wl']" class="icon" (click)="emitirClickWish()">favorite_border</mat-icon>
     <mat-icon [routerLink]="['/carrinho']" class="icon">shopping_cart</mat-icon>
+    <mat-icon [routerLink]="['/fale-conosco']" class="icon">email</mat-icon>
     <mat-icon [routerLink]="['/']" class="icon" (click)="logoutUsuario()">logout</mat-icon>
   </div>
 </nav>
