--- a/src/app/components/entidades/fale-conosco-app/fale-conosco-app.component.html
+++ b/src/app/components/entidades/fale-conosco-app/fale-conosco-app.component.html
@@ -19,10 +19,9 @@
             <label for="">Comentário</label>
             <textarea name="country" [(ngModel)]="dataset.country"></textarea>
         </div>
-
+    
         <div class="bloco">
-            <button id="btn-pedido" type="submit" class="btn" (click)="onSubmit()" [routerLink]="['/home-plataforma']">Enviar</button>
+            <button type="submit" id="btn-pedido" type="button" class="btn" (submit)="onSubmit()">Enviar</button>
         </div>
     </form>
 </div>
-
