Fixed fale conosco do usuário

--- a/src/app/components/entidades/fale-conosco-app/fale-conosco-app.component.html
+++ b/src/app/components/entidades/fale-conosco-app/fale-conosco-app.component.html
@@ -21,7 +21,7 @@
         </div>
     
         <div class="bloco">
-            <button type="submit" id="btn-pedido" type="button" class="btn" (submit)="onSubmit()">Enviar</button>
+            <button type="submit" id="btn-pedido" type="button" class="btn" (click)="onSubmit()" [routerLink]="['/']">Enviar</button>
         </div>
     </form>
 </div>
