Capturando apenas o id do video no link do video do youtube que o usuário inserir

--- a/src/app/components/entidades/aprendizado/aprendizado.component.css
+++ b/src/app/components/entidades/aprendizado/aprendizado.component.css
@@ -90,5 +90,6 @@ div button.btn:hover {
     justify-content: space-between;
     font-weight: 500;
     padding-left: 0;
+    margin-left: 50px;
 }
 
