--- a/src/app/components/entidades/curso-aprendizado/curso-aprendizado.component.html
+++ b/src/app/components/entidades/curso-aprendizado/curso-aprendizado.component.html
@@ -10,13 +10,12 @@
         <li [ngbNavItem]="i" *ngFor="let mo of modulos; let i = index; trackBy: track;">
             <a ngbNavLink>Módulo {{i + 1}}</a>
             <ng-template ngbNavContent>
-                <h3>{{mo.titulo}}</h3>
 
     <div class="sub-container">
         <div class="info-container">
-            <div id="titulo" class="cont-curso">{{mo.titulo}}</div>
-            <div id="conteudo" class="cont-curso">{{mo.conteudoPrincipal}}</div>
+            <h1 id="titulo" class="cont-curso">{{mo.titulo}}</h1>
             <img class="cont-curso" src="{{urlImagem}}{{mo.imagem}}" alt="">
+            <div id="conteudo" class="cont-curso">{{mo.conteudoPrincipal}}</div>
         </div>
         <div class="cont-curso" class="video-container">
             <youtube-player 
