--- a/src/app/components/plataforma/adicionando-modulos/adicionando-modulos.component.css
+++ b/src/app/components/plataforma/adicionando-modulos/adicionando-modulos.component.css
@@ -240,3 +240,35 @@ p {
 .filho-3 {
     background-color: green;
 }
+
+.sub-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.info-container {
+    margin-top: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.info-container img {
+    margin-top: 50px;
+    width: 400px;
+    height: 300px;
+}
+
+.cont-curso {
+    width: 100px;
+    height: 50px;
+    font-size: 70px;
+    margin-top: 50px;
+}
+
+.video-container {
+    margin-top: 50px;
+}
