--- a/src/app/components/plataforma/cursos-plataforma/cursos-plataforma.component.css
+++ b/src/app/components/plataforma/cursos-plataforma/cursos-plataforma.component.css
@@ -66,6 +66,7 @@ button.btn:hover {
     justify-content: space-between;
     font-weight: 500;
     padding-left: 0;
+    margin-left: 50px;
 }
 
 .tools{
