--- a/src/app/components/plataforma/fale-conosco/fale-conosco.component.css
+++ b/src/app/components/plataforma/fale-conosco/fale-conosco.component.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap');
 
 .container-form {
-    width: 100vw;
-    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
+    padding: 30px 0;
 }
 
 .fale-conosco-text {
