--- a/src/app/components/plataforma/adicionando-modulos/adicionando-modulos.component.css
+++ b/src/app/components/plataforma/adicionando-modulos/adicionando-modulos.component.css
@@ -69,7 +69,7 @@ div img{
 }
 
 #titulo{
-    font-size: 20px;
+    font-size: 35px;
     font-weight: 500;
 }
 
@@ -244,15 +244,16 @@ p {
 .sub-container {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     flex-direction: column;
+    padding: 30px;
 }
 
 .info-container {
-    margin-top: 100px;
+    margin: 0;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
     flex-direction: column;
 }
 
