--- a/src/app/components/plataforma/adicionando-modulos/adicionando-modulos.component.css
+++ b/src/app/components/plataforma/adicionando-modulos/adicionando-modulos.component.css
@@ -273,3 +273,17 @@ p {
 .video-container {
     margin-top: 50px;
 }
+
+.info-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.video-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
