--- a/src/app/components/plataforma/adicionando-modulos/adicionando-modulos.component.css
+++ b/src/app/components/plataforma/adicionando-modulos/adicionando-modulos.component.css
@@ -10,6 +10,7 @@
 .add-text {
     font-family: 'Montserrat';
     font-size: 30px;
+    line-height: 30px;
 }
 
 #btn-pedido{
@@ -244,28 +245,20 @@ p {
 .sub-container {
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     flex-direction: column;
     padding: 30px;
 }
 
-.info-container {
-    margin: 0;
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-direction: column;
-}
-
 .info-container img {
     margin-top: 50px;
-    width: 400px;
-    height: 300px;
+    width: 800px;
+    height: 500px;
 }
 
 .cont-curso {
-    width: 100px;
-    height: 50px;
+    width: 100%;
+    height: 50%;
     font-size: 70px;
     margin-top: 50px;
 }
@@ -279,6 +272,9 @@ p {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
+    width: 100%;
+    height: 100%;
 }
 
 .video-container {
