--- a/src/app/components/plataforma/cursos-plataforma/cursos-plataforma.component.html
+++ b/src/app/components/plataforma/cursos-plataforma/cursos-plataforma.component.html
@@ -18,7 +18,7 @@
               <h5 class="card-title" (click)="emitirCurso(curso)" [routerLink]="['/home-plataforma/adicionando-modulos']">{{curso.titulo}}</h5>
               <p class="card-text">{{curso.descricao}}</p>
               <p class="card-text">{{curso.requisitos}}</p>
-              <p class="card-text">{{curso.valor}}</p>
+              <p class="card-text">R${{curso.valor}}</p>
             </div>
   
             <div class="tools">
